--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dmitriifd.github.io/schedule-day/",
+  "homepage": "https://dmitriifd.github.io/schedule-day",
   "name": "shedule",
   "private": true,
   "version": "0.0.0",
